--- a/index.css
+++ b/index.css
@@ -15,12 +15,15 @@
     scroll-behavior: smooth;
  }
 
-body {
+ #welcome_screen {
+    height: 100vh;
+	width: 100vw;
     background-image: url('images/background.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
+    position:relative;
+    overflow:auto;
 }
 
 #my_name {
@@ -45,7 +48,7 @@ body {
     width: 30%;
     margin: auto;
     margin-top: 3.5%;
-    font-size: 50px;
+    font-size: 40px;
     text-align: center;
 
 }
@@ -58,7 +61,6 @@ body {
     border: 3px solid rgb(178,101,89);
     margin-bottom: 10%;
     background-color: rgba(178,101,89,0.5);
-    transition: 0.5s
 }
 
 #menu div:last-of-type {
@@ -67,4 +69,55 @@ body {
 
 #menu div:hover {
     background-color: rgba(178,101,89,1);
+    transition: 0.5s
 }
+
+a {
+    text-decoration: none;
+}
+
+a:visited { 
+    color: black;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    float: left;
+    height: 300px;
+}
+
+#about_me {
+    height: 50vh;
+	width: 100vw;
+    background-color: aqua;
+}
+
+#my_career {
+    height: 50vh;
+	width: 100vw;
+    background-color: aqua;
+}
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+  }
