--- a/index.css
+++ b/index.css
@@ -87,13 +87,17 @@ body {
 
 img {
     float: left;
-    height: 300px;
+    height: 50vh;
+    margin-right: 2.5%;
 }
 
 #about_me {
     height: 50vh;
 	width: 100vw;
-    background-color: aqua;
+    background-color: white;
+    margin-top: 0;
+    position:relative;
+    overflow:auto;
 }
 
 #my_career {
@@ -102,22 +106,29 @@ img {
     background-color: aqua;
 }
 
-#myBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: red; /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
-  }
-  
-  #myBtn:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
-  }
+#hobbies {
+    list-style-type: none; 
+    padding: 0; 
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    text-indent: 5%;
+}
+
+h3 {
+    text-align: center;
+    font-family: Otaku;
+    font-size: 50px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    margin-top: 0;
+    margin-bottom: 0%;
+    margin-right: 5%;
+    margin-left: 27.5%;
+}
