--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 /* Variables */
 :root {
-    --bottom_border: 2px solid #444;
+    --border: 2px solid #444;
     --otaku: Otaku;
     --theme_color_solid: #FF9912;
     --theme_color_transparent: #FF991250;
@@ -39,8 +39,8 @@ What the user sees as soon as he lands on the page */
     background-size: cover;
     position:relative;
     overflow:auto;
-    border-bottom: var(--bottom_border);
-}
+    border-bottom: var(--border);
+ }
 
 /* Properties for my name that shows at the top of the page */
 #my_name {
@@ -106,52 +106,35 @@ body {
     padding: 0;
 }
 
-/* Image's properties*/
-img {
+
+/* Properties for the "About me" section. */
+#about_me, #skills {
+    height: 50vh;
+	width: 100vw;
+    background-color: white;
+    border-bottom: var(--border);
+
+}
+
+#about_me img {
     float: left;
     height: 50vh;
     margin-right: 2.5%;
     clear: both;
-    border-bottom: var(--bottom_border);
+    border-bottom: var(--border);
+    border-right: var(--border);
 }
 
-/* General properties for: 
-    - "About me" section
-    - "Skills" section */
-#about_me {
+/* Properties for the "Skills" section. */
+
+#skills img {
+    float: right;
     height: 50vh;
-	width: 100vw;
-    background-color: white;
-    border-bottom: var(--bottom_border);
-    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 10vw), 0 100%);
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% calc(100% - 2.5vw), 0 100%);
+    margin-left: 2.5%;
+    clear: both;
+    border-bottom: var(--border);
+    border-left: var(--border);
 }
-
-#skills {
-    margin-top: 5% ;
-    height: 50vh;
-	width: 100vw;
-    background-color: white;
-    border-bottom: var(--bottom_border);
-    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 10vw), 0 100%);
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% calc(100% - 2.5vw), 0 100%);
-}
-
-.container {
-    position: relative;
-    height: 50vh;
-  }
-
-  .small-container {
-    position: absolute;
-    background: black;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    clip-path: polygon(-1% -1%, 99% 1%, 101% calc(101% - 2.5vw), -1% 101%);
-    z-index: -1;
-  }
 
 
 #faq {
@@ -200,7 +183,7 @@ h3 {
     bottom: 20px;
     right: 20px;
     display: none;
-    }
+}
     
 
 /* Style the buttons that are used to open and close the accordion panel */
