--- a/index.css
+++ b/index.css
@@ -8,11 +8,22 @@
     --color_text: #444;
 }
 
+ /* Fade in animation
+ Used when user lands on the page */
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+     }
+}
+
 /* Location of Otaku font */
 @font-face {
     font-family: Otaku;
     src: url('fonts/Otaku Rant italbold.ttf');
-  }
+}
 
 /* Subtitle contour */
 @supports (-webkit-text-stroke: 1px var(--color_titles)) {
@@ -28,19 +39,24 @@
     scroll-behavior: smooth;
  }
 
- /* Welcomer screen properties:
+/* Make body fill the entire screen */
+body {
+  margin: 0;
+  padding: 0;
+}
+
+/* Welcomer screen properties:
 What the user sees as soon as he lands on the page */
- #welcome_screen {
-    height: 100vh;
-	width: 100vw;
-    background-image: url('images/background.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position:relative;
-    overflow:auto;
-    border-bottom: var(--border);
- }
+#welcome_screen {
+  height: 100vh;
+  background-image: url('images/background.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position:relative;
+  overflow:auto;
+  border-bottom: var(--border);
+}
 
 /* Properties for my name that shows at the top of the page */
 #my_name {
@@ -50,6 +66,9 @@ What the user sees as soon as he lands on the page */
     margin-top: 2.5%;
     text-align: center;
     color: var(--color_titles);
+    animation: fadeInAnimation ease 5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
 /* Properties for the page title that shows at the top of the page,
@@ -60,9 +79,12 @@ under my name */
     margin: auto;
     text-align: center;
     color: var(--color_titles);
+    animation: fadeInAnimation ease 5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
-/* Properties for the menu */
+/* Properties for the menu and its options */
 #menu {
     font-family: var(--otaku);
     width: 30%;
@@ -70,10 +92,11 @@ under my name */
     margin-top: 3.5%;
     font-size: 40px;
     text-align: center;
-    
+    animation: fadeInAnimation ease 5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards; 
 }
 
-/* Properties for the menu's options */
 #menu div {
     border-radius: 10px;
     height: 50px;
@@ -96,24 +119,16 @@ No blue hyperlink text.
 No line under the text.
 No purple color when the user clicks on the links. */
 a, a:visited {
-    color: black;
-    text-decoration: none;
+  text-decoration: none;
+  color: black;
+  outline: 0;
 }
 
-/* Make body fill the entire screen */
-body {
-    margin: 0;
-    padding: 0;
-}
-
-
-/* Properties for the "About me" section. */
+/* Properties for the "About me" and "Skills" section. */
 #about_me, #skills {
     height: 50vh;
-	width: 100vw;
     background-color: white;
     border-bottom: var(--border);
-
 }
 
 #about_me img {
@@ -125,8 +140,6 @@ body {
     border-right: var(--border);
 }
 
-/* Properties for the "Skills" section. */
-
 #skills img {
     float: right;
     height: 50vh;
@@ -136,13 +149,10 @@ body {
     border-left: var(--border);
 }
 
-
+/* Properties for the "FAQ" section. */
 #faq {
     height: 100vh;
-	width: 100vw;
     background-color: white;
-    position:relative;
-    overflow:auto;
     margin: auto;
 }
 
@@ -157,13 +167,13 @@ body {
     color: var(--color_text);
 }
 
-/* Section title properties*/
+/* Section title and text properties*/
 h3 {
     text-align: center;
     font-family: var(--otaku);
     font-size: 50px;
     margin-top: 0;
-    margin-bottom: 2.5%;
+    margin-bottom: 2%;
     padding-top: 1%;
 }
 
@@ -183,63 +193,166 @@ h3 {
     bottom: 20px;
     right: 20px;
     display: none;
-}
-    
-
-/* Style the buttons that are used to open and close the accordion panel */
-.accordion {
-    background-color:  var(--theme_color_transparent);
-    color: var(--color_text);
-    cursor: pointer;
-    padding: 18px;
-    width: 70%;
-    text-align: left;
+    position: fixed;
+    z-index: 99;
     border: none;
     outline: none;
-    transition: 0.5s;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    margin-left: 12.5%;
-}
-  
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
     background-color: var(--theme_color_solid);
+    color: white;
+    cursor: pointer; 
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
 }
 
-.accordion:first-of-type {
-    border-radius: 5px 5px 0 0;
+/* Accordion design and properties. 
+Code adapted from: https://alvarotrigo.com/blog/css-accordion/ */
+#faq_list {
+  max-width: 700px;
+  margin: auto;
+  padding: 0 15px;
+  text-align: center;
 }
 
-.accordion:last-of-type {
-    border-radius: 0 0 5px 5px;
+section.faq_list {
+  padding-top: 2em;
+  padding-bottom: 3em;
 }
 
-.panel:last-of-type {
-    border-radius: 0 0 5px 5px;
+#faq_list ul {
+  text-align: left;
 }
 
-/* Style the accordion panel. Note: hidden by default */
-.panel {
-    padding: 0 18px;
-    width: 70%;
-    background-color: #50505025;
-    display: none;
-    overflow: hidden;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    margin-left: 12.5%;
+.transition, p, ul li i:before, ul li i:after {
+  transition: all 0.3s;
 }
 
-.accordion:after {
-    content: '+'; /* Unicode character for "plus" sign (+) */
-    font-size: 13px;
-    color: #777;
-    float: right;
-    margin-left: 5px;
-  }
-  
-  .active:after {
-    content: "-"; /* Unicode character for "minus" sign (-) */
-    transition: all 0.4s ease;
-  }
+#faq_list .no-select, #faq h2 {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  user-select: none;
+}
+
+#faq_list h2 {
+  color: var(--theme_color_solid);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  line-height: 24px;
+  text-align: left;
+  padding: 15px 15px 0;
+  text-transform: none;
+  font-weight: 300;
+  letter-spacing: 1px;
+  display: block;
+  margin: 0;
+  cursor: pointer;
+  transition: .2s;
+}
+
+#faq_list p {
+  color: var(--color_text);
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 1.45;
+  position: relative;
+  overflow: hidden;
+  max-height: 250px;
+  will-change: max-height;
+  contain: layout;
+  display: inline-block;
+  opacity: 1;
+  transform: translate(0, 0);
+  margin-top: 5px;
+  margin-bottom: 15px;
+  padding: 0 50px 0 15px;
+  transition: .3s opacity, .6s max-height;
+  hyphens: auto;
+  z-index: 2;
+}
+
+#faq_list ul {
+  list-style: none;
+  perspective: 900;
+  padding: 0 0 20px 0px;
+  margin: 0;
+}
+
+#faq_list ul li {
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+  background: #fff;
+  -webkit-tap-highlight-color: transparent;
+  border: 2px solid var(--theme_color_solid);
+  border-radius: 5px;
+}
+
+#faq_list ul li + li {
+  margin-top: 15px;
+}
+
+#faq_list ul li:last-of-type {
+  padding-bottom: 0;
+}
+
+#faq_list ul li i {
+  position: absolute;
+  transform: translate(-6px, 0);
+  margin-top: 28px;
+  right: 15px;
+}
+
+#faq_list ul li i:before, ul li i:after {
+  content: "";
+  position: absolute;
+  background-color: var(--theme_color_solid);
+  width: 3px;
+  height: 9px;
+}
+
+#faq_list ul li i:before {
+  transform: translate(-2px, 0) rotate(45deg);
+}
+
+#faq_list ul li i:after {
+  transform: translate(2px, 0) rotate(-45deg);
+}
+
+#faq_list ul li input[type=checkbox] {
+  position: absolute;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  touch-action: manipulation;
+}
+
+#faq_list ul li input[type=checkbox]:checked ~ h2 {
+  color: var(--color_text);
+}
+
+#faq_list ul li input[type=checkbox]:checked ~ p {
+  max-height: 0;
+  transition: .3s;
+  opacity: 0;
+}
+
+#faq_list ul li input[type=checkbox]:checked ~ i:before {
+  transform: translate(2px, 0) rotate(45deg);
+}
+#faq_list ul li input[type=checkbox]:checked ~ i:after {
+  transform: translate(-2px, 0) rotate(-45deg);
+}
+
+/* Linkedin link properties */
+#LinkedIn {
+  color: var(--theme_color_solid);
+  font-weight: bold;
+}
+
