--- a/mobile_portrait.css
+++ b/mobile_portrait.css
@@ -13,18 +13,13 @@ for mobile devices in portrait mode */
     }
 
     #page_title {
-        font-size: 8vw;
+        font-size: 9vw;
     }
 
     #menu {
         font-size: 8vw;
         width: 75%;
         margin-top: 27.5%;
-    }
-
-    #menu div {
-        border: 3px solid var(--theme_color_solid);
-        background-color:  var(--theme_color_solid);
     }
 
     .section_p {
@@ -45,7 +40,7 @@ for mobile devices in portrait mode */
   
     #faq_list p, #faq_list h2, 
     #hobbies, .section_p  {
-        font-size: 3.1vw;
+        font-size: 11px;
     }
 
     #btn-back-to-top {
@@ -64,11 +59,6 @@ for mobile devices in portrait mode */
     #skills li {
         height: 7.5vh;
     }
-
-    #page_title {
-        -webkit-text-stroke: var(--theme_color_solid);
-        -webkit-text-fill-color: var(--theme_color_solid);
-    }
 }
 
 @media only screen and (min-width: 376px) and (orientation: portrait) {
@@ -82,18 +72,13 @@ for mobile devices in portrait mode */
     }
 
     #page_title {
-        font-size: 8vw;
+        font-size: 9vw;
     }
 
     #menu {
         font-size: 8vw;
         width: 75%;
         margin-top: 35%;
-    }
-
-    #menu div {
-        border: 3px solid var(--theme_color_solid);
-        background-color:  var(--theme_color_solid);
     }
 
     .section_p {
@@ -116,6 +101,10 @@ for mobile devices in portrait mode */
     #hobbies, .section_p  {
         font-size: 3.7vw;
     }
+    
+    #faq_list h2 {
+        padding: 15px 25px 0 15px;
+    }
 
     #btn-back-to-top {
         bottom: 20px;
@@ -133,11 +122,6 @@ for mobile devices in portrait mode */
     #skills li {
         height: 7.25vh;
     }
-
-    #page_title {
-        -webkit-text-stroke: var(--theme_color_solid);
-        -webkit-text-fill-color: var(--theme_color_solid);
-    }
 }
 
 @media only screen and (min-width: 500px) and (orientation: portrait) {
@@ -151,18 +135,13 @@ for mobile devices in portrait mode */
     }
 
     #page_title {
-        font-size: 8vw;
+        font-size: 9vw;
     }
 
     #menu {
         font-size: 5vw;
         width: 50%;
         margin-top: 15%;
-    }
-
-    #menu div {
-        border: 3px solid var(--theme_color_solid);
-        background-color:  var(--theme_color_solid);
     }
 
     .section_p {
@@ -202,11 +181,67 @@ for mobile devices in portrait mode */
     #skills li {
         height: 8vh;
     }
+}
+
+@media only screen and (min-width: 650px) and (orientation: portrait) {
+    #skills > img, #about_me > img {
+      display: none;
+    }
+
+    #my_name {
+        font-size: 10vw;
+        margin-top: 12.5%;
+    }
 
     #page_title {
-        -webkit-text-stroke: var(--theme_color_solid);
-        -webkit-text-fill-color: var(--theme_color_solid);
+        font-size: 9vw;
+    }
+
+    #menu {
+        font-size: 5vw;
+        width: 50%;
+        margin-top: 15%;
+    }
+
+    .section_p {
+        margin: 0 5% 0 5%;
+        color: var(--color_text);
+    }
+  
+    #hobbies {
+        margin: 0;
+        text-align: center;
+        color: var(--color_text);
+    }
+  
+    h3 {
+        font-size: 4vw;
+        margin: 5%
+    }
+  
+    #faq_list p, #faq_list h2, 
+    #hobbies, .section_p  {
+        font-size: 2vw;
+    }
+
+    #btn-back-to-top {
+        bottom: 20px;
+        right: 20px;
+        cursor: pointer; 
+        padding: 5px;
+        border-radius: 5px;
+        font-size: 3vw;
+    }
+
+    #skills ul {
+        margin-right: 5%;
+    }
+    
+    #skills li {
+        height: 8vh;
     }
 }
+
+
 
 
