--- a/css/index.css
+++ b/css/index.css
@@ -2,23 +2,6 @@
 Designed with Full HD resolution
 */
 
-/* Variables */
-:root {
-    --border: 2px solid #444;
-    --color_text: #444;
-    --color_titles: black;
-    --min_section_height: 500px;
-    --otaku: Otaku;
-    --section-font-size: 20px;
-    --section_height: 50vh;
-    --section_image_margin: 2.5%;
-    --theme_color_solid: #FF9912;
-    --theme_color_transparent: #FF991250;
-    --text_font: Arial, Helvetica, sans-serif;
-    --welcome_screen_min_width: 300px;  
-    
-}
-
 /* Box sizing and scroll behavior properties*/
 * {
   box-sizing: border-box;
@@ -30,8 +13,8 @@ and limit its max size */
 body {
   margin: 0;
   padding: 0;
-  max-width: 1920px;
-  max-height: 1080px;
+  max-width: var(--max-width);
+  /*max-height: var(--max-height); */
   min-width: var(--welcome_screen_min_width);
 }
 
@@ -39,10 +22,11 @@ body {
 What the user sees as soon as he lands on the page */
 #welcome_screen {
   height: 100vh;
-  max-width: 1920px;
-  max-height: 1080px;
+  min-height: 600px; 
+  max-width: var(--max-width);
+  /*max-height: var(--max-height); */
   min-width: var(--welcome_screen_min_width);
-  background-image: url('images/background.jpg');
+  background-image: url('../images/background.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -393,7 +377,7 @@ section.faq_list {
 /* Location of Otaku font */
 @font-face {
     font-family: Otaku;
-    src: url('fonts/Otaku Rant italbold.ttf');
+    src: url('../fonts/Otaku Rant italbold.ttf');
 }
 
 /* Subtitle contour */
